# strudel-desktop

./: .actrc  .gitignore  CLAUDE.md  INSTALL_MACOS.md  README.md  TESTING_CI.md  TEST_CI_QUICK.sh  eslint.config.mjs  extract_examples.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  ci.yml
app/: README.md  package.json
app/public/: examples.json
app/src/: settings.mjs
app/src/components/: ExampleBrowser.jsx
app/src/components/ui/: Button.astro
app/src/docs/: ApiDoc.jsx
app/src/pages/: bakery.astro  examples.astro
app/src/repl/: Repl.css  useReplContext.jsx  workspace.mjs
app/src/repl/components/: Header.jsx
app/src/repl/components/panel/: ChatTab.jsx  ExportTab.jsx  FilesTab.jsx  MidiImportButton.jsx  Panel.jsx  PatternsTab.jsx  SnippetsTab.jsx
bench/: tunes.bench.mjs
docs/: INTEGRATION_SUMMARY.md  README.md
docs/features/: chat-assistant.md  midi-import.md  queue-system.md  rag-search.md  rust-pattern-commands.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plan/: 01-error-handling.md  02-devtools-integration.md  03-security-configuration.md  04-code-organization.md  05-window-management.md  06-performance-optimization.md  07-logging-improvements.md  08-documentation.md  README.md
src-tauri/src/: audioexport.rs  chatbridge.rs  lib.rs  loggerbridge.rs  main.rs  midibridge.rs  music_theory.rs  oscbridge.rs  strudelbridge.rs  toolbox_poc.rs  tools.rs  tools_simple.rs
src-tauri/src/crates/midi-to-strudel/: Cargo.toml  README.md
src-tauri/src/crates/midi-to-strudel/src/: ast.rs  drums.rs  instruments.rs  lib.rs  main.rs  midi.rs  note.rs  output.rs  track.rs
src-tauri/src/crates/strudel-audio/: Cargo.toml  README.md  download_samples.sh
src-tauri/src/crates/strudel-audio/assets/: samples.json
src-tauri/src/crates/strudel-audio/examples/: play_pattern.rs
src-tauri/src/crates/strudel-audio/src/: engine.rs  lib.rs  player.rs  samples.rs  scheduler.rs  voice.rs
src-tauri/src/crates/strudel-core/: Cargo.toml  README.md
src-tauri/src/crates/strudel-core/src/: combinators.rs  euclid.rs  fraction.rs  hap.rs  lib.rs  pattern.rs  state.rs  timespan.rs  value.rs
src-tauri/src/crates/strudel-mini/: Cargo.toml  README.md
src-tauri/src/crates/strudel-mini/src/: ast.rs  error.rs  evaluator.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_tests.rs  preprocessor.rs  span.rs
src-tauri/src/rag/: commands.rs  embeddings.rs  generator.rs  mod.rs  retriever.rs  types.rs
test/: metadata.test.mjs  runtime.mjs  tunes.test.mjs
test/__snapshots__/: examples.test.mjs.snap
website/public/: examples-safe.json  examples.json  uzu-wavetables.json  uzudrumkit.json
website/src/: settings.mjs  tauri.mjs  validation.ts
website/src/components/: ExampleBrowser.jsx
website/src/components/RightSidebar/: RightSidebar.astro  TableOfContents.tsx
website/src/components/Udels/: UdelsHeader.jsx
website/src/components/ui/: Card.astro  IconButton.astro
website/src/layouts/: MainLayout.astro
website/src/pages/: blog.astro  examples.astro
website/src/pages/api/: examples.js
website/src/pages/learn/: code.mdx  conditional-modifiers.mdx  effects.mdx  mini-notation.mdx  samples.mdx  xen.mdx
website/src/pages/technical-manual/: project-start.mdx
website/src/pages/workshop/: first-sounds.mdx
website/src/repl/: Repl.css  files.mjs  idbutils.mjs  prebake.mjs  useReplContext.jsx  workspace.mjs
website/src/repl/components/: Header.jsx
website/src/repl/components/panel/: ChatTab.jsx  ExamplesTab.jsx  ExportTab.jsx  Panel.jsx  Reference.jsx  SettingsTab.jsx  SnippetsTab.jsx  SoundsTab.jsx
